# pgwidgets-python

./: .gitignore  .readthedocs.yaml  LICENSE.md  README.md  pyproject.toml  test_pg2.py
.github/workflows/: tests.yml
docs/: WhatsNew.rst  architecture.rst  async.rst  callbacks.rst  conf.py  extras.rst  getting-started.rst  index.rst  subclassing.rst  sync.rst  utilities.rst  web-servers.rst  widgets.rst
docs/api/: async.rst  index.rst  sync.rst
examples/: README.md  all_widgets.py  all_widgets_async.py  demo_async.py  demo_sync.py  demo_treeview.py
examples/flask-multi-process/: README.md  gunicorn.conf.py  nginx.conf  server.py  user_app.py
pgwidgets/: __init__.py  _json.py  buffer.py  callbacks.py  defs.py  method_types.py
pgwidgets/async_/: Widgets.py  __init__.py  application.py  widget.py
pgwidgets/extras/: __init__.py  file_browser.py
pgwidgets/sync/: Widgets.py  __init__.py  application.py  widget.py
tests/: test_async_session.py  test_defs.py  test_extras.py  test_fonts.py  test_protocol.py  test_reconstruct.py  test_resolve_kwargs.py  test_session.py  test_stateful.py  test_widget_classes.py
