[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pgwidgets"
dynamic = ["version"]
description = "Python bindings for the pgwidgets JavaScript widget library"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.12"
authors = [
    {name = "PGWidgets Developers"},
]
dependencies = [
    "pgwidgets-js",
    "websockets>=12",
]
keywords = ["widgets", "ui", "gui", "websocket", "browser"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: User Interfaces",
]

[project.optional-dependencies]
dev = ["sphinx", "furo", "sphinx-autodoc-typehints"]

[project.urls]
Homepage = "https://github.com/naojsoft/pgwidgets-python"
Repository = "https://github.com/naojsoft/pgwidgets-python"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[tool.setuptools.packages.find]
include = ["pgwidgets*"]
